--- a/REST.API/src/main/resources/application.properties
+++ b/REST.API/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 database.driver=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/tim4
+spring.datasource.url=jdbc:mysql://mysql:3306/tim4
 spring.datasource.username=EtfSI2016
 spring.datasource.password=2016SIEtf
 
