--- a/REST.API/src/main/resources/application.properties
+++ b/REST.API/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 database.driver=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mysql:3306/tim4
-spring.datasource.username=EtfSI2016
-spring.datasource.password=2016SIEtf
+spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11180590
+spring.datasource.username=sql11180590
+spring.datasource.password=rtUhpwvMaB
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
